# project-dbt-bigquery

./: .gitignore  bq_loader.py  constants.py  pyproject.toml  readme.md
eda_files/: Ecom-01.html  Ecom-01.ipynb
project-venv/: pyvenv.cfg
project_dbt_bigquery/: dbt_project.yml
project_dbt_bigquery/models/: sources.yml
project_dbt_bigquery/models/operations/: report_days_in_inventory.sql  report_fulfilled_orders.sql  stg_ops_big_table.sql
project_dbt_bigquery/models/sales/: report_mom_market.sql  stg_combined_tables.sql  stg_fulfilled_orders.sql
project_dbt_bigquery/tests/: schema.yml
